# OTwitchML

./: .gitignore  LICENSE  README.md  config.json  main.ml
chatbot/: dune-project  oTwtichML.opam
chatbot/lib/: dune
chatbot/test/: dune
pubsub/: dune-project  ocamlPubsub.opam
pubsub/lib/: dune
pubsub/test/: dune
